--- a/translations/ja/LC_MESSAGES/messages.po
+++ b/translations/ja/LC_MESSAGES/messages.po
@@ -729,6 +729,37 @@ msgstr "デバイスを追加するか、デバイスが自動登録されるの
 msgid "设备将自动检查并下载更新"
 msgstr "デバイスは自動的に更新をチェックしてダウンロードします"
 
+# 关于页面
+msgid "关于"
+msgstr "について"
+
+msgid "关于我们"
+msgstr "私たちについて"
+
+msgid "林愿留"
+msgstr "林愿留"
+
+msgid "FOTA 固件升级服务器开发者"
+msgstr "FOTA ファームウェアアップグレードサーバー開発者"
+
+msgid "博客"
+msgstr "ブログ"
+
+msgid "项目介绍"
+msgstr "プロジェクト紹介"
+
+msgid "FOTA 固件升级服务器是一个专为物联网设备设计的固件空中升级平台，支持 AIR780E 等设备的远程固件更新。"
+msgstr "FOTA ファームウェアアップグレードサーバーは、IoTデバイス向けに特別に設計されたファームウェア無線アップグレードプラットフォームで、AIR780Eなどのデバイスのリモートファームウェア更新をサポートしています。"
+
+msgid "本系统提供了完整的固件版本管理、设备管理、升级规则配置和升级日志记录等功能，帮助开发者轻松实现设备的远程升级。"
+msgstr "このシステムは、完全なファームウェアバージョン管理、デバイス管理、アップグレードルール設定、アップグレードログ記録機能を提供し、開発者がデバイスのリモートアップグレードを簡単に実装できるよう支援します。"
+
+msgid "技术栈"
+msgstr "技術スタック"
+
+msgid "固件升级服务器"
+msgstr "ファームウェアアップグレードサーバー"
+
 # 其他
 msgid "已向设备 {} 发送升级指令"
 msgstr "デバイス {} にアップグレードコマンドを送信しました"
